@@ -9,6 +9,7 @@
 - #1432094 by jordojuice: Update available attributes for form elements to reflect submit
   and button elements.
 - #1255348 by jordojuice: Add Condition: Form button was clicked.
+- #1429960 by jordojuice: Add tests for Rules forms support events.
 
 -------------
  7.x-1.0-rc1
